# polymarket

./: .gitignore  CLAUDE.md  DEPLOY.md  Embedding_Interpretability_Paper.tex  README.md  bloomsbury-dashboard.html  meridian.html
.planning/: ARCHITECTURE.md  insider-research.md  phase1-spec.md  phase2-spec.md  phase3-spec.md
.research/: r1-apis.md  r2-blockchain.md  r3-volumes.md  r4-tools.md  r5-signals.md
bali/: PLAN.md
books/: __init__.py  knowledge_graph.py
dashboard/: next.config.ts  package-lock.json  package.json  vercel.json
experiments/: .gitignore  README.md  (+19 more)
marl-epistemic/: README.md  RESULTS_REPORT.md  pyproject.toml
marl-epistemic/marl_epistemic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
marl-epistemic/scripts/: generate_figures.py  run_experiment1.py  run_experiment2.py  run_experiment3.py  run_experiment4.py
marl-epistemic/src/agents/: __init__.py  attention_agent.py  base.py  cnn_agent.py  ensemble.py  linear_agent.py  mlp_agent.py
marl-epistemic/src/config/: experiment1.yaml  experiment2.yaml  experiment3.yaml
marl-epistemic/src/environments/: __init__.py  exploration.py  matrix_games.py  molecular.py  prediction_market.py
marl-epistemic/src/learning/: __init__.py  evidence_lola.py  keynesian_loss.py  lola.py  reinforce.py
marl-epistemic/src/metrics/: __init__.py  blind_spot.py  calibration.py  diversity.py  evidence.py
marl-epistemic/src/utils/: logging.py  plotting.py
marl-epistemic/tests/: test_agents.py  test_blind_spot.py  test_environments.py  test_evidence.py  test_keynesian_loss.py  test_lola.py  test_molecular.py
(+338 files in other folders)
